@@ -77,6 +77,9 @@ setup(
     [z3c.autoinclude.plugin]
     target = plone
 
+    [zopectl.command]
+    dump_content_stats = ftw.contentstats.command:dump_content_stats
+
     [console_scripts]
     dump-content-stats = ftw.contentstats.console:dump_stats_cmd
     """,
