@@ -9,6 +9,8 @@ Changelog
 
 - Add option to specify data path for disk usage calculation. [buchi]
 
+- Add zopectl command for dumping content stats. [buchi]
+
 
 1.3.0 (2023-04-04)
 ------------------
